Fix aligning issues with hotel page for st giles

--- a/src/targets/stGiles/styles/views/HotelDetails/index.less
+++ b/src/targets/stGiles/styles/views/HotelDetails/index.less
@@ -33,6 +33,9 @@
 
   .hotel-overview {
     margin-top: 148px;
+    view-more-images {
+      margin-left: 0 !important;
+    }
   }
 
   .gallery-link,
