--- a/src/targets/stGiles/styles/views/hotel-detail.less
+++ b/src/targets/stGiles/styles/views/hotel-detail.less
@@ -36,6 +36,7 @@ hotel-detail {
 
   .hotel-info-amenities{
     margin-top: 40px;
+    margin-left: 0;
     .viewport-mobile & {
       margin-top:0;
     }
@@ -660,6 +661,10 @@ hotel-detail {
   }
 
   .hotel-detail__rooms-compare {
+    div[grid="12"] {
+      margin-right: 0;
+      margin-left: 0;
+    }
     .room-list-compare-container {
       .rooms-list {
         list-item {
@@ -697,6 +702,10 @@ hotel-detail {
   }
 
   .hotel-detail__location{
+    div[grid="12"] {
+      margin-left: 0;
+      margin-right: 0;
+    }
     header{
       position: relative;
       .chain-sign &:after{
